--- a/Profile Folder/chrome/pages/newTabHomeIncognito/partials/chrome-47/_final.scss
+++ b/Profile Folder/chrome/pages/newTabHomeIncognito/partials/chrome-47/_final.scss
@@ -10,6 +10,10 @@
 	width: 100%;
 	flex-direction: row-reverse;
 
+	@media (prefers-color-scheme: dark) {
+		background-color: black;
+	}
+
 	// GTK+
 	&[gksystheme="gtk"]:not([gkthemed], [gkchrthemed]) {
 		body {
